# cv-validator

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml
cv_validator/checks/: __init__.py
cv_validator/checks/data/: __init__.py  brightness_check.py  color_shift.py  find_duplicates.py  image_exist.py  image_size.py  label_distribution.py  metric_by_group.py  metric_check.py  metric_diff.py  param_distribution.py  train_test_shift.py
cv_validator/checks/metric/: __init__.py  metric_by_group.py  metric_check.py  metric_diff.py
cv_validator/core/: check.py  condition.py  context.py  data.py  result.py  status.py  suite.py
cv_validator/utils/: check.py  common.py  constants.py  data.py  display.py  embedding.py  hashing.py  image.py  metric.py  psi.py  task.py
tests/: conftest.py  test_cv_validator.py  test_whole_pipeline.py
tests/core/: test_data.py  test_status.py
tests/utils/: test_data_utils.py
