[tool.poetry]
name = "cv-validator"
version = "0.1.0"
description = ""
authors = ["Ruslan Sakaev <sakaevruslan@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.1"
pandas = "^1.4.0"
opencv-python = "^4.5.5"
plotly = "^5.6.0"
ipython = "^8.0.1"
onnxruntime = "^1.10.0"
scipy = "^1.8.0"
#my-package = {path = ".", develop = true}
onnx = "^1.11.0"
tqdm = "^4.62.3"
ipywidgets = "^7.6.5"
px = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
notebook = "^6.4.8"
mypy = "^0.931"
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^22.1.0"
albumentations = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '.pyi?$'
exclude = '''
/(
    .git
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
)/
'''
