[tool.poetry]
name = "cv-validator"
version = "0.1.3"
description = "Tool for validating your computer vision data and model results."
authors = ["Ruslan Sakaev <sakaevruslan@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ningeen/cv-validator"

[tool.poetry.dependencies]
python = ">=3.6.2,<3.11"
pandas = ">=1.1.5"
numpy = ">=1.19.5"
scipy = ">=1.5.4"
opencv-python = "^4.5.2"
plotly = "^5.6.0"
tqdm = "^4.62.3"
onnx = "^1.11.0"
onnxruntime = ">=1.9.0"
joblib = "^1.1.0"
ipython = ">=7.16.3"
ipywidgets = "^7.6.5"


[tool.poetry.dev-dependencies]
pytest = ">=7.0.1"
notebook = "^6.4.8"
mypy = "^0.931"
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^22.1.0"
albumentations = "^1.1.0"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '.pyi?$'
exclude = '''
/(
    .git
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
)/
'''
